Fix dark mode glossary highlight color

--- a/src/styles/_tokens.sass
+++ b/src/styles/_tokens.sass
@@ -16,6 +16,7 @@ $main-background: #eeeeee
 $card-background: #ffffff
 $card-footer-background: #f9f9f9
 $highlight-background: #cccccc
+$dark-highlight-background: #444444
 
 $dark-header-footer-background: darken($accent, 30%)
 $dark-main-background: #222222
