--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -901,6 +901,7 @@ table.expenses
     background-color: $dark-card-background
     border-color: $dark-timeline-line-color
 
+  // Contribute
   table.expenses
     border-color: $dark-timeline-line-color
 
@@ -909,6 +910,11 @@ table.expenses
 
   .donations-bar
     color: $main-text-color
+
+  // Glossary
+  .glossary-entry
+    &.highlighted
+      background-color: $dark-highlight-background
 
 .use-dark
   background-color: $dark-main-background
